fixed scrollbar

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -7,6 +7,9 @@ html, body
 	margin 0
 	padding 0
 
+html
+	overflow-y scroll
+
 body
 	display flex
 	flex-direction column
@@ -290,6 +293,9 @@ div.hr
 
 	html, body
 		font-size 1em
+
+	html
+		overflow-y initial
 
 	.right
 		display none
